compiler/parse/parser.cpp
#include "compiler/parse/parser.h"

#include <cassert>
#include <optional>
#include <utility>

namespace mc::parse {
namespace {

constexpr std::size_t kMaxTypeExprDepth = 256;
constexpr std::size_t kMaxUnaryExprDepth = 256;

using mc::ast::Attribute;
using mc::ast::AttributeArg;
using mc::ast::CasePattern;
using mc::ast::Decl;
using mc::ast::DefaultCase;
using mc::ast::EnumVariantDecl;
using mc::ast::ExportBlock;
using mc::ast::Expr;
using mc::ast::FieldDecl;
using mc::ast::FieldInit;
using mc::ast::ImportDecl;
using mc::ast::NamePattern;
using mc::ast::ParamDecl;
using mc::ast::SourceFile;
using mc::ast::Stmt;
using mc::ast::SwitchCase;
using mc::ast::TypeExpr;
using mc::lex::Token;
using mc::lex::TokenKind;
using mc::support::DiagnosticSeverity;

class Parser {
  public:
    Parser(const mc::lex::LexResult& lexed_module,
           const std::filesystem::path& file_path,
           support::DiagnosticSink& diagnostics)
        : tokens_(lexed_module.tokens), file_path_(file_path), diagnostics_(diagnostics), ok_(lexed_module.ok) {}

    ParseResult Run() {
        auto source_file = std::make_unique<SourceFile>();
        source_file->span.begin = Current().span.begin;

        SkipNewlines();
        if (Match(TokenKind::kExport)) {
            source_file->has_export_block = true;
            source_file->export_block = ParseExportBlock(Previous().span.begin);
            RequireSourceSeparator("export block");
        }

        while (Match(TokenKind::kImport)) {
            source_file->imports.push_back(ParseImportDecl(Previous().span.begin));
            RequireSourceSeparator("import declaration");
        }

        SkipNewlines();
        while (!AtEnd()) {
            auto decl = ParseTopLevelDecl();
            if (decl.has_value()) {
                source_file->decls.push_back(std::move(*decl));
            } else {
                SynchronizeTopLevel();
            }

            SkipNewlines();
        }

        source_file->span.end = Current().span.end;
        return {
            .source_file = std::move(source_file),
            .ok = ok_ && !diagnostics_.HasErrors(),
        };
    }

  private:
    bool AtEnd() const {
        return Current().kind == TokenKind::kEof;
    }

    const Token& Current() const {
        return tokens_[index_];
    }

    const Token& Previous() const {
        assert(index_ > 0 && "Previous() called before any Advance()");
        return tokens_[index_ - 1];
    }

    const Token& Peek(std::size_t offset) const {
        const auto target = index_ + offset;
        return tokens_[target < tokens_.size() ? target : tokens_.size() - 1];
    }

    bool Check(TokenKind kind) const {
        return Current().kind == kind;
    }

    bool Match(TokenKind kind) {
        if (!Check(kind)) {
            return false;
        }
        Advance();
        return true;
    }

    const Token& Advance() {
        if (!AtEnd()) {
            ++index_;
        }
        return Previous();
    }

    const Token* Consume(TokenKind kind, const char* message) {
        if (Match(kind)) {
            return &Previous();
        }
        ReportError(Current(), message);
        return nullptr;
    }

    void ReportError(const Token& token, const std::string& message) {
        diagnostics_.Report({
            .file_path = file_path_,
            .span = token.span,
            .severity = DiagnosticSeverity::kError,
            .message = message,
        });
        ok_ = false;
    }

    void SkipNewlines() {
        while (Match(TokenKind::kNewline)) {
        }
    }

    bool RequireSourceSeparator(const char* context) {
        if (AtEnd() || Check(TokenKind::kNewline)) {
            SkipNewlines();
            return true;
        }

        ReportError(Current(), std::string("expected newline after ") + context);
        return false;
    }

    // SynchronizeTopLevel — error-recovery anchor after a bad top-level
    // declaration.
    //
    // Recovery strategy: skip tokens until a newline is consumed or until
    // a token that can start a top-level declaration is found.  The safe token
    // set is: func, struct, enum, distinct, type, var, const, extern, @.
    // After synchronisation the parser resumes from the next declaration;
    // partial nodes from the failed declaration are discarded.
    void SynchronizeTopLevel() {
        while (!AtEnd()) {
            if (Match(TokenKind::kNewline)) {
                SkipNewlines();
                return;
            }

            if (Check(TokenKind::kFunc) || Check(TokenKind::kStruct) || Check(TokenKind::kEnum) || Check(TokenKind::kDistinct) ||
                Check(TokenKind::kType) || Check(TokenKind::kVar) || Check(TokenKind::kConst) || Check(TokenKind::kExtern) ||
                Check(TokenKind::kAt)) {
                return;
            }

            Advance();
        }
    }

    std::optional<std::string> ParseIdentifier(const char* message) {
        if (!Check(TokenKind::kIdentifier)) {
            ReportError(Current(), message);
            return std::nullopt;
        }
        const auto text = Current().lexeme;
        Advance();
        return text;
    }

    ExportBlock ParseExportBlock(mc::support::SourcePosition start) {
        ExportBlock block;
        block.span.begin = start;
        Consume(TokenKind::kLBrace, "expected '{' after export");
        if (!Check(TokenKind::kRBrace)) {
            do {
                const auto name = ParseIdentifier("expected export name");
                if (name.has_value()) {
                    block.names.push_back(*name);
                }
            } while (Match(TokenKind::kComma));
        }
        const auto* close = Consume(TokenKind::kRBrace, "expected '}' after export block");
        block.span.end = close != nullptr ? close->span.end : Current().span.end;
        return block;
    }

    ImportDecl ParseImportDecl(mc::support::SourcePosition start) {
        ImportDecl decl;
        decl.span.begin = start;
        const auto name = ParseIdentifier("expected module name after import");
        if (name.has_value()) {
            decl.module_name = *name;
        }
        decl.span.end = Previous().span.end;
        return decl;
    }

    std::vector<Attribute> ParseAttributes() {
        std::vector<Attribute> attributes;
        while (Match(TokenKind::kAt)) {
            Attribute attribute;
            attribute.span.begin = Previous().span.begin;
            const auto name = ParseIdentifier("expected attribute name after '@'");
            if (name.has_value()) {
                attribute.name = *name;
            }

            if (Match(TokenKind::kLParen)) {
                if (!Check(TokenKind::kRParen)) {
                    do {
                        AttributeArg arg;
                        arg.span.begin = Current().span.begin;
                        if (Check(TokenKind::kIdentifier)) {
                            arg.is_identifier = true;
                            arg.value = Current().lexeme;
                            Advance();
                        } else if (IsLiteral(Current().kind)) {
                            arg.value = Current().lexeme;
                            Advance();
                        } else {
                            ReportError(Current(), "expected attribute argument");
                            break;
                        }
                        arg.span.end = Previous().span.end;
                        attribute.args.push_back(std::move(arg));
                    } while (Match(TokenKind::kComma));
                }
                Consume(TokenKind::kRParen, "expected ')' after attribute arguments");
            }

            attribute.span.end = Previous().span.end;
            attributes.push_back(std::move(attribute));
        }
        return attributes;
    }

    std::optional<std::vector<std::string>> ParseTypeParams() {
        if (!Match(TokenKind::kLt)) {
            return std::nullopt;
        }

        std::vector<std::string> names;
        if (!Check(TokenKind::kGt)) {
            do {
                const auto name = ParseIdentifier("expected type parameter name");
                if (name.has_value()) {
                    names.push_back(*name);
                }
            } while (Match(TokenKind::kComma));
        }

        Consume(TokenKind::kGt, "expected '>' after type parameters");
        return names;
    }

    std::vector<std::unique_ptr<TypeExpr>> ParseCallTypeArgs() {
        std::vector<std::unique_ptr<TypeExpr>> args;
        Consume(TokenKind::kLt, "expected '<' before call type arguments");
        if (!Check(TokenKind::kGt)) {
            do {
                args.push_back(ParseTypeExpr());
            } while (Match(TokenKind::kComma));
        }
        Consume(TokenKind::kGt, "expected '>' after call type arguments");
        return args;
    }

    std::optional<Decl> ParseTopLevelDecl() {
        auto attributes = ParseAttributes();
        if (!attributes.empty()) {
            SkipNewlines();
        }
        if (Match(TokenKind::kExtern)) {
            return ParseExternFuncDecl(std::move(attributes), Previous().span.begin);
        }
        if (Match(TokenKind::kFunc)) {
            return ParseFuncDecl(std::move(attributes), Previous().span.begin);
        }
        if (Match(TokenKind::kStruct)) {
            return ParseStructDecl(std::move(attributes), Previous().span.begin);
        }
        if (Match(TokenKind::kEnum)) {
            return ParseEnumDecl(std::move(attributes), Previous().span.begin);
        }
        if (Match(TokenKind::kDistinct)) {
            return ParseDistinctDecl(Previous().span.begin);
        }
        if (Match(TokenKind::kType)) {
            return ParseTypeAliasDecl(Previous().span.begin);
        }
        if (Match(TokenKind::kVar)) {
            return ParseBindingDecl(Decl::Kind::kVar, Previous().span.begin, true);
        }
        if (Match(TokenKind::kConst)) {
            return ParseBindingDecl(Decl::Kind::kConst, Previous().span.begin, false);
        }

        ReportError(Current(), "expected top-level declaration");
        return std::nullopt;
    }

    std::optional<Decl> ParseExternFuncDecl(std::vector<Attribute> attributes, mc::support::SourcePosition start) {
        Decl decl;
        decl.kind = Decl::Kind::kExternFunc;
        decl.attributes = std::move(attributes);
        decl.span.begin = start;

        Consume(TokenKind::kLParen, "expected '(' after extern");
        const auto abi = ParseIdentifier("expected extern ABI name");
        if (abi.has_value()) {
            decl.extern_abi = *abi;
        }
        Consume(TokenKind::kRParen, "expected ')' after extern ABI");
        Consume(TokenKind::kFunc, "expected 'func' after extern modifier");
        auto parsed = ParseFuncLikeTail(std::move(decl), false);
        if (parsed.has_value()) {
            parsed->span.end = Previous().span.end;
        }
        return parsed;
    }

    std::optional<Decl> ParseFuncDecl(std::vector<Attribute> attributes, mc::support::SourcePosition start) {
        Decl decl;
        decl.kind = Decl::Kind::kFunc;
        decl.attributes = std::move(attributes);
        decl.span.begin = start;
        return ParseFuncLikeTail(std::move(decl), true);
    }

    std::optional<Decl> ParseFuncLikeTail(Decl decl, bool expect_body) {
        const auto name = ParseIdentifier("expected function name");
        if (name.has_value()) {
            decl.name = *name;
        }

        if (const auto type_params = ParseTypeParams(); type_params.has_value()) {
            decl.type_params = std::move(*type_params);
        }

        Consume(TokenKind::kLParen, "expected '(' after function name");
        if (!Check(TokenKind::kRParen)) {
            do {
                decl.params.push_back(ParseParameter());
            } while (Match(TokenKind::kComma));
        }
        Consume(TokenKind::kRParen, "expected ')' after parameter list");

        if (!Check(TokenKind::kLBrace) && !Check(TokenKind::kNewline) && !Check(TokenKind::kEof)) {
            for (auto& type : ParseReturnTypes()) {
                decl.return_types.push_back(std::move(type));
            }
        }

        if (expect_body) {
            auto body = ParseBlockStmt();
            if (body != nullptr) {
                decl.body = std::move(body);
                decl.span.end = decl.body->span.end;
            }
        } else {
            decl.span.end = Previous().span.end;
        }
        return decl;
    }

    ParamDecl ParseParameter() {
        ParamDecl param;
        param.span.begin = Current().span.begin;
        param.attributes = ParseAttributes();
        const auto name = ParseIdentifier("expected parameter name");
        if (name.has_value()) {
            param.name = *name;
        }
        Consume(TokenKind::kColon, "expected ':' after parameter name");
        param.type = ParseTypeExpr();
        param.span.end = param.type != nullptr ? param.type->span.end : Previous().span.end;
        return param;
    }

    std::vector<std::unique_ptr<TypeExpr>> ParseReturnTypes() {
        std::vector<std::unique_ptr<TypeExpr>> result;
        if (Match(TokenKind::kLParen)) {
            if (!Check(TokenKind::kRParen)) {
                do {
                    result.push_back(ParseTypeExpr());
                } while (Match(TokenKind::kComma));
            }
            Consume(TokenKind::kRParen, "expected ')' after return types");
            return result;
        }

        result.push_back(ParseTypeExpr());
        return result;
    }

    std::optional<Decl> ParseStructDecl(std::vector<Attribute> attributes, mc::support::SourcePosition start) {
        Decl decl;
        decl.kind = Decl::Kind::kStruct;
        decl.attributes = std::move(attributes);
        decl.span.begin = start;
        const auto name = ParseIdentifier("expected struct name");
        if (name.has_value()) {
            decl.name = *name;
        }
        if (const auto type_params = ParseTypeParams(); type_params.has_value()) {
            decl.type_params = std::move(*type_params);
        }

        Consume(TokenKind::kLBrace, "expected '{' to start struct body");
        SkipNewlines();
        while (!Check(TokenKind::kRBrace) && !AtEnd()) {
            decl.fields.push_back(ParseFieldDecl());
            ConsumeMemberSeparator();
        }
        Consume(TokenKind::kRBrace, "expected '}' to close struct body");
        decl.span.end = Previous().span.end;
        return decl;
    }

    std::optional<Decl> ParseEnumDecl(std::vector<Attribute> attributes, mc::support::SourcePosition start) {
        Decl decl;
        decl.kind = Decl::Kind::kEnum;
        decl.attributes = std::move(attributes);
        decl.span.begin = start;
        const auto name = ParseIdentifier("expected enum name");
        if (name.has_value()) {
            decl.name = *name;
        }
        if (const auto type_params = ParseTypeParams(); type_params.has_value()) {
            decl.type_params = std::move(*type_params);
        }

        Consume(TokenKind::kLBrace, "expected '{' to start enum body");
        SkipNewlines();
        while (!Check(TokenKind::kRBrace) && !AtEnd()) {
            decl.variants.push_back(ParseEnumVariantDecl());
            ConsumeMemberSeparator();
        }
        Consume(TokenKind::kRBrace, "expected '}' to close enum body");
        decl.span.end = Previous().span.end;
        return decl;
    }

    std::optional<Decl> ParseDistinctDecl(mc::support::SourcePosition start) {
        Decl decl;
        decl.kind = Decl::Kind::kDistinct;
        decl.span.begin = start;
        const auto name = ParseIdentifier("expected distinct type name");
        if (name.has_value()) {
            decl.name = *name;
        }
        Consume(TokenKind::kAssign, "expected '=' in distinct declaration");
        decl.aliased_type = ParseTypeExpr();
        decl.span.end = decl.aliased_type != nullptr ? decl.aliased_type->span.end : Previous().span.end;
        return decl;
    }

    std::optional<Decl> ParseTypeAliasDecl(mc::support::SourcePosition start) {
        Decl decl;
        decl.kind = Decl::Kind::kTypeAlias;
        decl.span.begin = start;
        const auto name = ParseIdentifier("expected type alias name");
        if (name.has_value()) {
            decl.name = *name;
        }
        if (const auto type_params = ParseTypeParams(); type_params.has_value()) {
            decl.type_params = std::move(*type_params);
        }
        Consume(TokenKind::kAssign, "expected '=' in type alias declaration");
        decl.aliased_type = ParseTypeExpr();
        decl.span.end = decl.aliased_type != nullptr ? decl.aliased_type->span.end : Previous().span.end;
        return decl;
    }

    std::optional<Decl> ParseBindingDecl(Decl::Kind kind, mc::support::SourcePosition start, bool allow_storage_without_initializer) {
        Decl decl;
        decl.kind = kind;
        decl.span.begin = start;
        decl.pattern = ParseBindingPattern();

        if (Match(TokenKind::kColon)) {
            decl.type_ann = ParseTypeExpr();
        }

        if (Match(TokenKind::kAssign)) {
            decl.has_initializer = true;
            decl.values = ParseExprList();
        } else if (!allow_storage_without_initializer || decl.type_ann == nullptr) {
            ReportError(Current(), kind == Decl::Kind::kConst ? "const declaration requires initializer" : "var declaration requires either a type or initializer");
        }

        decl.span.end = Previous().span.end;
        return decl;
    }

    FieldDecl ParseFieldDecl() {
        FieldDecl field;
        field.span.begin = Current().span.begin;
        const auto name = ParseIdentifier("expected field name");
        if (name.has_value()) {
            field.name = *name;
        }
        Consume(TokenKind::kColon, "expected ':' after field name");
        field.type = ParseTypeExpr();
        field.span.end = field.type != nullptr ? field.type->span.end : Previous().span.end;
        return field;
    }

    EnumVariantDecl ParseEnumVariantDecl() {
        EnumVariantDecl variant;
        variant.span.begin = Current().span.begin;
        const auto name = ParseIdentifier("expected enum variant name");
        if (name.has_value()) {
            variant.name = *name;
        }
        if (Match(TokenKind::kLParen)) {
            if (!Check(TokenKind::kRParen)) {
                do {
                    variant.payload_fields.push_back(ParseVariantField());
                } while (Match(TokenKind::kComma));
            }
            Consume(TokenKind::kRParen, "expected ')' after enum variant payload");
        }
        variant.span.end = Previous().span.end;
        return variant;
    }

    FieldDecl ParseVariantField() {
        FieldDecl field;
        field.span.begin = Current().span.begin;
        if (Check(TokenKind::kIdentifier) && Peek(1).kind == TokenKind::kColon) {
            field.name = Current().lexeme;
            Advance();
            Advance();
        }
        field.type = ParseTypeExpr();
        field.span.end = field.type != nullptr ? field.type->span.end : Previous().span.end;
        return field;
    }

    NamePattern ParseBindingPattern() {
        NamePattern pattern;
        pattern.span.begin = Current().span.begin;
        const auto first = ParseIdentifier("expected binding name");
        if (first.has_value()) {
            pattern.names.push_back(*first);
        }
        while (Match(TokenKind::kComma)) {
            const auto next = ParseIdentifier("expected binding name after ','");
            if (next.has_value()) {
                pattern.names.push_back(*next);
            }
        }
        pattern.span.end = Previous().span.end;
        return pattern;
    }

    std::unique_ptr<TypeExpr> ParseTypeExpr() {
        return ParseTypeExpr(0);
    }

    std::unique_ptr<TypeExpr> ParseTypeExpr(std::size_t depth) {
        if (depth >= kMaxTypeExprDepth) {
            ReportError(Current(), "type expression nesting exceeds parser limit");
            return nullptr;
        }

        if (Match(TokenKind::kConst) || Match(TokenKind::kStar)) {
            auto type = std::make_unique<TypeExpr>();
            type->kind = Previous().kind == TokenKind::kConst ? TypeExpr::Kind::kConst : TypeExpr::Kind::kPointer;
            type->span.begin = Previous().span.begin;
            type->inner = ParseTypeExpr(depth + 1);
            type->span.end = type->inner != nullptr ? type->inner->span.end : Previous().span.end;
            return type;
        }

        std::unique_ptr<TypeExpr> type;
        if (Match(TokenKind::kLBracket)) {
            type = std::make_unique<TypeExpr>();
            type->kind = TypeExpr::Kind::kArray;
            type->span.begin = Previous().span.begin;
            type->length_expr = ParseExpr();
            Consume(TokenKind::kRBracket, "expected ']' after array length");
            type->inner = ParseTypeExpr(depth + 1);
            type->span.end = type->inner != nullptr ? type->inner->span.end : Previous().span.end;
        } else if (Match(TokenKind::kLParen)) {
            type = std::make_unique<TypeExpr>();
            type->kind = TypeExpr::Kind::kParen;
            type->span.begin = Previous().span.begin;
            type->inner = ParseTypeExpr(depth + 1);
            const auto* close = Consume(TokenKind::kRParen, "expected ')' after parenthesized type");
            type->span.end = close != nullptr ? close->span.end : Previous().span.end;
        } else {
            if (!Check(TokenKind::kIdentifier)) {
                ReportError(Current(), "expected type expression");
                return nullptr;
            }

            type = std::make_unique<TypeExpr>();
            type->kind = TypeExpr::Kind::kNamed;
            type->span.begin = Current().span.begin;
            type->name = Current().lexeme;
            Advance();

            while (Match(TokenKind::kDot)) {
                const auto member = ParseIdentifier("expected type name after '.'");
                if (!member.has_value()) {
                    break;
                }
                type->name += "." + *member;
            }

            if (Match(TokenKind::kLt)) {
                if (!Check(TokenKind::kGt)) {
                    do {
                        type->type_args.push_back(ParseTypeExpr(depth + 1));
                    } while (Match(TokenKind::kComma));
                }
                Consume(TokenKind::kGt, "expected '>' after type arguments");
            }

            type->span.end = Previous().span.end;
        }

        return type;
    }

    std::unique_ptr<Stmt> ParseBlockStmt() {
        if (!Match(TokenKind::kLBrace)) {
            ReportError(Current(), "expected '{' to start block");
            // Return an empty block rather than nullptr so that callers that
            // assign the result to a branch/body field are never left with a
            // null pointer that a downstream AST traversal might dereference.
            auto empty = std::make_unique<Stmt>();
            empty->kind = Stmt::Kind::kBlock;
            empty->span = Current().span;
            return empty;
        }
